--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/wMeloFernandes/clean-react-app#readme",
   "devDependencies": {
+    "@types/node": "^15.3.1",
     "git-commit-msg-linter": "^3.1.0",
     "i": "^0.3.6",
-    "npm": "^7.14.0"
+    "npm": "^7.14.0",
+    "typescript": "^4.2.4"
   }
 }
