--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
   "homepage": "https://github.com/wMeloFernandes/clean-react-app#readme",
   "devDependencies": {
     "@types/node": "^15.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "eslint": "^7.26.0",
+    "eslint-config-standard-with-typescript": "^11.0.1",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.1.0",
     "i": "^0.3.6",
     "npm": "^7.14.0",
