--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.1.0",
+    "husky": "^6.0.0",
     "i": "^0.3.6",
+    "lint-staged": "^11.0.0",
     "npm": "^7.14.0",
     "typescript": "^4.2.4"
   }
