--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/wMeloFernandes/clean-react-app#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.3.1",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "eslint": "^7.26.0",
@@ -29,8 +30,10 @@
     "git-commit-msg-linter": "^3.1.0",
     "husky": "^6.0.0",
     "i": "^0.3.6",
+    "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
     "npm": "^7.14.0",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   }
 }
