--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "React Project using TDD, Clean Architecture and SOLID principles",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --passWithNoTests",
+    "test:watch": "npm test -- --watch",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage"
   },
   "repository": {
     "type": "git",
