--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/wMeloFernandes/clean-react-app#readme",
   "devDependencies": {
+    "@types/faker": "^5.5.5",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.1",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
@@ -30,6 +31,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
+    "faker": "^5.5.3",
     "git-commit-msg-linter": "^3.1.0",
     "husky": "^6.0.0",
     "i": "^0.3.6",
