--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/wMeloFernandes/clean-react-app#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^5.5.5",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.1",
@@ -40,5 +41,8 @@
     "npm": "^7.14.0",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
