--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/faker": "^5.5.5",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.1",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "eslint": "^7.26.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
@@ -43,6 +45,8 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
