--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.5",
     "eslint": "^7.26.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
     "eslint-plugin-import": "^2.23.2",
@@ -41,10 +42,15 @@
     "git-commit-msg-linter": "^3.1.0",
     "husky": "^6.0.0",
     "i": "^0.3.6",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
+    "node-sass": "^6.0.0",
     "npm": "^7.14.0",
+    "sass-loader": "^11.1.1",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.5.6",
+    "ts-loader": "^9.2.1",
     "typescript": "^4.2.4",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
