--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "i": "^0.3.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "jest-localstorage-mock": "^2.4.12",
     "lint-staged": "^11.0.0",
     "node-sass": "^6.0.0",
     "npm": "^7.14.0",
