--- a/package.json
+++ b/package.json
@@ -1,68 +1,71 @@
 {
-  "name": "clean-react-app",
-  "version": "1.0.0",
-  "description": "React Project using TDD, Clean Architecture and SOLID principles",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --open",
-    "test": "jest --passWithNoTests --no-cache --runInBand",
-    "test:watch": "npm test -- --watch",
-    "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --coverage"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wMeloFernandes/clean-react-app.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wMeloFernandes/clean-react-app/issues"
-  },
-  "homepage": "https://github.com/wMeloFernandes/clean-react-app#readme",
-  "devDependencies": {
-    "@testing-library/react": "^11.2.7",
-    "@types/axios": "^0.14.0",
-    "@types/faker": "^5.5.5",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.3.1",
-    "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5",
-    "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^5.2.5",
-    "eslint": "^7.26.0",
-    "eslint-config-standard-with-typescript": "^11.0.1",
-    "eslint-plugin-import": "^2.23.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-standard": "^5.0.0",
-    "faker": "^5.5.3",
-    "git-commit-msg-linter": "^3.1.0",
-    "husky": "^6.0.0",
-    "i": "^0.3.6",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "jest-localstorage-mock": "^2.4.12",
-    "lint-staged": "^11.0.0",
-    "node-sass": "^6.0.0",
-    "npm": "^7.14.0",
-    "sass-loader": "^11.1.1",
-    "style-loader": "^2.0.0",
-    "ts-jest": "^26.5.6",
-    "ts-loader": "^9.2.1",
-    "typescript": "^4.2.4",
-    "webpack": "^5.37.1",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
-  }
+    "name": "clean-react-app",
+    "version": "1.0.0",
+    "description": "React Project using TDD, Clean Architecture and SOLID principles",
+    "main": "index.js",
+    "scripts": {
+        "start": "webpack serve --open",
+        "test": "jest --passWithNoTests --no-cache --runInBand",
+        "test:watch": "npm test -- --watch",
+        "test:staged": "npm test -- --findRelatedTests",
+        "test:ci": "npm test -- --coverage",
+        "style:check": "prettier --check \"src/**/*\"",
+        "style:fix": "prettier --write \"src/**/*\""
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/wMeloFernandes/clean-react-app.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/wMeloFernandes/clean-react-app/issues"
+    },
+    "homepage": "https://github.com/wMeloFernandes/clean-react-app#readme",
+    "devDependencies": {
+        "@testing-library/react": "^11.2.7",
+        "@types/axios": "^0.14.0",
+        "@types/faker": "^5.5.5",
+        "@types/jest": "^26.0.23",
+        "@types/node": "^15.3.1",
+        "@types/react": "^17.0.6",
+        "@types/react-dom": "^17.0.5",
+        "@types/react-router-dom": "^5.1.7",
+        "@typescript-eslint/eslint-plugin": "^4.24.0",
+        "clean-webpack-plugin": "^4.0.0-alpha.0",
+        "css-loader": "^5.2.5",
+        "eslint": "^7.26.0",
+        "eslint-config-standard-with-typescript": "^11.0.1",
+        "eslint-plugin-import": "^2.23.2",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.1.0",
+        "eslint-plugin-react": "^7.23.2",
+        "eslint-plugin-standard": "^5.0.0",
+        "faker": "^5.5.3",
+        "git-commit-msg-linter": "^3.1.0",
+        "husky": "^6.0.0",
+        "i": "^0.3.6",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^26.6.3",
+        "jest-localstorage-mock": "^2.4.12",
+        "lint-staged": "^11.0.0",
+        "node-sass": "^6.0.0",
+        "npm": "^7.14.0",
+        "prettier": "^2.3.0",
+        "sass-loader": "^11.1.1",
+        "style-loader": "^2.0.0",
+        "ts-jest": "^26.5.6",
+        "ts-loader": "^9.2.1",
+        "typescript": "^4.2.4",
+        "webpack": "^5.37.1",
+        "webpack-cli": "^4.7.0",
+        "webpack-dev-server": "^3.11.2"
+    },
+    "dependencies": {
+        "axios": "^0.21.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0"
+    }
 }
