--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,6 +1,6 @@
 {
   "hooks": {
-    "pre-commit": "lint-staged",
+    "pre-commit": "lint-staged && npm run style:fix",
     "pre-push": "npm run test:ci"
   }
 }
