--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "*.{ts,tsx}": ["eslint 'src/**' --fix", "npm run test:staged"]
+  "*.{ts,tsx}": ["npm run style:fix", "eslint 'src/**' --fix", "npm run test:staged"]
 }
