feat: ensure RequiredFieldValidation returns error if field is empty

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/require-await": "off",
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
     "space-before-function-paren": "off"
